--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <?php
 	$this->headLink()->appendStylesheet($this->baseUrl().'/js/slider/style.css');
 ?>
@@ -6,33 +5,38 @@
 <div id="subconteudo" class="span-24 last">	
 	<div class="span-5">
 	<div class="span-5 accord">
-		<h3><a href="#">ACESSO</a></h3>
-		<div id="autenticacao">						
-			<div class="span-3">
-				Usuário<br/>
-				<input name="usuario" type="text" id="usuario" size="15" maxlength="12"/>
+		<h3><a href="#">PAINEL DE ACESSO</a></h3>
+		<div>
+			<p>	
+			<form name="acesso" action="">
+			<div class="span-4">
+			<input name="usuario" type="text" />
+			<br>
+			<input name="senha" type="password" />
 			</div>
-			<div class="span-3">
-				Senha<br/>			
-				<input name="senha" type="text" id="senha" size="15" maxlength="12"/>
-			</div>
-			<button class="acesso" onclick="autenticar()">Entrar</button>
-			<div id="msgAutenticacao" class="hide"></div>			
+			<button class="botao">Entrar</button>
+			<br><br>
+			<a href="#">Cadastre-se </a>
+			<br>
+			<a href="#"> Esqueceu a senha </a>
+			
+			</form>
+			</p>
 		</div>			
 	</div>	
 	<br><br>
 	<div class="clear"><br></div>
 	<script src="http://widgets.twimg.com/j/2/widget.js"></script>
-	<script>
+	<script> 
 		new TWTR.Widget({   
 		version: 2,   
 		type: 'search',   
-		search: '@pv_fusion',   
+		search: '#pendrive',   
 		interval: 6000,   
 		title: 'TWITTER:',   
 		subject: 'pen drive rapido',   
 		width: 190,   
-		height: 300,   
+		height: 275,   
 
 		theme: {     
 			shell: {       
@@ -158,8 +162,10 @@
 	<div class="span-20">
 		<br><br>
 		<b style="font-size:40px; color:#000">
-		BANNER DE PROPAGANDA <br><br><br>
-		BANNER DE PROPAGANDA 
+		<a href="#">
+		<img src="http://www.ving-xa.com/images/banner.jpg" title="EXEMPLO DE BANNER DE PROPAGANDA" />
+		</a>
+		
 		</b>
 	</div>
 
@@ -175,54 +181,54 @@
 $this->headScript()->appendFile($this->baseUrl().'/js/slider/jquery-easing-1.3.pack.js');
 $this->headScript()->appendFile($this->baseUrl().'/js/slider/jquery-easing-compatibility.1.2.pack.js');
 $this->headScript()->appendFile($this->baseUrl().'/js/slider/coda-slider.1.1.1.pack.js');
-$this->headScript()->appendFile($this->baseUrl().'/js/layoutIndex.js');
 
 ?>
-========
-<div id="subconteudo" class="span-24 last">	
-	<div class="span-5 accord">
-		<h3><a href="#">Entrar</a></h3>
-		<div id="autenticacao">
-			<div class="span-1 addtop-5">Apelido</div><div class="span-2 last push-03"><input type="text" size="12" name="apelido" id="apelido"/></div>			
-			<div class="span-1 addtop-5">Senha</div><div class="span-2 last push-03"><input type="text" size="12" name="senha" id="senha"/></div>
-			<button onclick="" id="botaoEsqueci" class="botao">Esqueceu a senha?</button>
-			<button onclick="autenticar()" id="botaoAutenticar" class="botao">Entrar</button>
-			<img class="hide" id="imgLoadAutenticacao" alt="loading" src="<?php echo $this->baseUrl();?>/imagens/mini-loader.gif"/>
-			<div class="span-4 last erro hide pretop-5" id="erroAutenticacao"></div>
-			
-		</div>		
-	</div>
-	<div class="span-19 last">
-		<div id="principal" class="tab span-19 last">
-			<ul>
-				<li><a href="#subPrincipal">Pendrive Rápido - Uma nova solução em armazenamento de arquivos, com muita praticidade, na Web</a></li>							
-			</ul>
-			<div id="subPrincipal" class="span-19 last">
-				<div class="span-19 last">
-					<div id="slogan" class="span-14">
-						<img alt="slogan" src="<?php echo $this->baseUrl();?>/imagens/slogan.jpg"></img>
-					</div>
-					<div class="span-4 last success">
-						<p>	Cadastre-se, <br/><br/>
-							e comece a disfrutar<br/><br/> 
-							dessa nova facilidade,<br/><br/>
-							clicando&nbsp<a href="<?php echo $this->baseUrl();?>/pendrive/cadastro">aqui</a>
-						</p>
-					</div>
-				</div>
-				<div class="span-18 last">				
-					<p>	Lorem ipsum dolor sit amet, consectetur adipiscing elit.	
-						Vivamus euismod quam vel risus luctus aliquam. Proin quis dolor mauris, 
-						non tincidunt tellus. Sed sagittis justo vel ipsum auctor sit amet adipiscing est vehicula. 
-						Suspendisse vel tellus at quam luctus ultrices. Nulla elit augue, tempus dignissim congue ac, 
-						posuere vel eros. Proin cursus adipiscing sagittis. Nullam et sem nibh.
-					</p>
-				</div>
-			</div>				
-		</div>
-	</div>
-	<?php $this->headScript()->appendFile($this->baseUrl().'/js/index.js');?>	
-</div>
+
+<script>
 	
+var theInt = null;
+var $crosslink, $navthumb;
+var curclicked = 0;
+		
+theInterval = function(cur){
+	clearInterval(theInt);
+	
+	if( typeof cur != 'undefined' )
+		curclicked = cur;
+	
+	$crosslink.removeClass("active-thumb");
+	$navthumb.eq(curclicked).parent().addClass("active-thumb");
+		$(".stripNav ul li a").eq(curclicked).trigger('click');
+	
+	theInt = setInterval(function(){
+		$crosslink.removeClass("active-thumb");
+		$navthumb.eq(curclicked).parent().addClass("active-thumb");
+		$(".stripNav ul li a").eq(curclicked).trigger('click');
+		curclicked++;
+		if( 6 == curclicked )
+			curclicked = 0;
+		
+	}, 3000);
+};
+		
+$(function(){
+	
+	$("#novidadespdr").codaSlider();
+	
+	$navthumb = $(".nav-thumb");
+	$crosslink = $(".cross-link");
+	
+	$navthumb
+	.click(function() {
+		var $this = $(this);
+		theInterval($this.parent().attr('href').slice(1) - 1);
+		return false;
+	});
+	
+	theInterval();
+});
+
+</script>
+
 
 
