--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -76,10 +76,18 @@
 		<div id="rodape">
 		 <br>
 			<div class="span-24">
-				<b style="color:#fff"> PEN DRIVE RAPIDO 2011 </b>
-				<br><br>
-				PROJETO UNIVERSITÁRIO DE CONCLUSÃO DE CURSO
-				<br>
+				<div class="span-5">
+					<b style="color:#fff"> PEN DRIVE RAPIDO 2011 </b>
+					<br><br>
+					PROJETO UNIVERSITÁRIO DE CONCLUSÃO DE CURSO
+					<br>
+				</div>
+				<div class="span-18">
+					<a href="#"> Sobre </a> 
+					<br>
+					<a href="#" title="entre em contato"> Contato </a>
+				</div>	
+				
 			</div>
 			<div class="clear"></div>
 		</div>
