inclusão de pasta views na pasta js

--- a/application/views/scripts/pendrive/cadastro.phtml
+++ b/application/views/scripts/pendrive/cadastro.phtml
@@ -52,6 +52,6 @@
 	</div>
 	<?php 
 		$this->headScript()->appendFile($this->baseUrl().'/jquery/jquery.validate.js');
-		$this->headScript()->appendFile($this->baseUrl().'/js/cadastro.js');
+		$this->headScript()->appendFile($this->baseUrl().'/js/views/pendrive/cadastro.js');
 	?>
 </div>
