--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -13,6 +13,7 @@
 	echo $this->headLink(); 
 	
 	$this->headScript()->prependFile($this->baseUrl().'/js/layout.js');
+	$this->headScript()->prependFile($this->baseUrl().'/js/Helper.js');
 	$this->headScript()->prependFile($this->baseUrl().'/js/jAjax.js');	
 	$this->headScript()->prependFile($this->baseUrl().'/jquery/jquery-ui/ui/jquery.ui.accordion.js');
 	$this->headScript()->prependFile($this->baseUrl().'/jquery/jquery-ui/ui/jquery.ui.tabs.js');
@@ -39,7 +40,7 @@
 				<div class="span-13">
 					<ul class="menuprincipal">
 						<li><a href="/index"> PRINCIPAL </a></li>
-						<li><a href="#"> CADASTRO </a></li>
+						<li><a href="<?php echo $this->baseUrl();?>/pendrive/cadastro"> CADASTRO </a></li>
 						<li><a href="#"> SOBRE </a></li>
 						<li><a href="#"> CONTATO </a></li>
 					</ul>
