subindo topo, diminuindo font menu

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -50,20 +50,19 @@
 				<div class="span-13 push-2"> 
 					<b style="font-size:28px; color:#48ADE3; font-family:'Comic Sans MS', cursive;">O seu dispositivo fácil</b> 
 				</div>
-				
-				<div class="span-13"> 
+
+				<div class="span-13 sobe"> 
 					<div class="push-11">
 					<img src="<?php echo $this->baseUrl();?>/imagens/pdr_seta.png" ></img>
 					</div>
 				</div>
-
 			</div>
 		</header>
 		
 		<!-- FIM TOPO -->
 
 		<!-- CONTEUDO -->
-		<div id="conteudo" class="span-24 last">			
+		<div id="conteudo" class="span-24 sobe last">			
 			<?php echo $this->layout()->content; ?>
 		</div>
 		<!-- FIM CONTEUDO -->
