--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -28,7 +28,7 @@ ul{list-style-type:none;}
 .menuprincipal li a{
 	font-family:Tahoma, Geneva, sans-serif;
 	font-weight:bolder;
-	font-size:20px;
+	font-size:18px;
 	padding:9px 10px 2px 10px;
 	text-decoration:none;
 	color:#FFF;
@@ -50,3 +50,7 @@ ul{list-style-type:none;}
 
 .clear {clear: both; margin: 0px}
 .spacer{font-size:0; line-height:10px; clear:both;}
+
+.sobe{
+	margin-top:-20px;
+}
